Create VM & BytecodeCompiler classes to setup bytecode interpreter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ add_library(
         lox
         src/lox.h src/lox.cpp
         src/ast.h src/ast.cpp
+        src/bytecode_compiler.h src/bytecode_compiler.cpp
         src/error.h src/error.cpp
         src/lexer.h src/lexer.cpp
         src/lox_boolean.h src/lox_boolean.cpp
@@ -21,6 +22,8 @@ add_library(
         src/parser.h src/parser.cpp
         src/source_location.h src/source_location.cpp
         src/token.h src/token.cpp
+        src/vm.h src/vm.cpp
+        src/vm_instruction.h src/vm_instruction.cpp
 )
 target_compile_features(lox PUBLIC cxx_std_20)
 target_include_directories(lox PUBLIC src)
